可观测性/05-otel/_monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/auth-realm":"Monitoring Auth Required","nginx.ingress.kubernetes.io/auth-secret":"monitoring-basic-auth","nginx.ingress.kubernetes.io/auth-type":"basic","nginx.ingress.kubernetes.io/ssl-redirect":"\\ true\\"},"name":"monitoring-ingress","namespace":"monitoring"},"spec":{"ingressClassName":"nginx","rules":[{"host":"grafana.lab.local","http":{"paths":[{"backend":{"service":{"name":"g [...]
    nginx.ingress.kubernetes.io/auth-realm: Monitoring Auth Required
    nginx.ingress.kubernetes.io/auth-secret: monitoring-basic-auth
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/ssl-redirect: \ true\
  creationTimestamp: "2026-07-03T15:21:19Z"
  generation: 5
  name: monitoring-ingress
  namespace: monitoring
  resourceVersion: "1778100"
  uid: 14ce0982-95f8-42bf-8338-5f1a48430ba9
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.lab.local
    http:
      paths:
      - backend:
          service:
            name: grafana
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: prometheus.lab.local
    http:
      paths:
      - backend:
          service:
            name: prometheus-server
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: skywalking.lab.local
    http:
      paths:
      - backend:
          service:
            name: skywalking-ui
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: loki.lab.local
    http:
      paths:
      - backend:
          service:
            name: loki
            port:
              number: 3100
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - grafana.lab.local
    - prometheus.lab.local
    - skywalking.lab.local
    - loki.lab.local
    secretName: monitoring-tls-secret
status:
  loadBalancer:
    ingress:
    - ip: 192.168.1.54
