可观测性/05-otel/_svc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: svccheck
  namespace: monitoring
spec:
  restartPolicy: Never
  containers:
  - name: c
    image: 192.168.1.61/library/alpine_curl
    command: ["sh", "-c"]
    args:
    - |
      curl -s http://jaeger.monitoring:16686/api/services; echo
